8th video completed

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,10 @@
 DB_USERNAME = riteshk
 DB_PASSWORD = fPQEXV1j927kLLQq
+
+PAYTM_MID=DIY12386817555501617
+PAYTM_WEBSITE=DIYtestingweb
+PAYTM_CHANNEL=WEB
+PAYTM_INDUSTRY_TYPE_ID=Retail
+
+PAYTM_CUST_ID=QYWOCj63505197919784                      
+PAYTM_MERCHANT_KEY=bKMfNxPPf_QdZppa
