--- a/server/.env
+++ b/server/.env
@@ -3,7 +3,7 @@ DB_PASSWORD = fPQEXV1j927kLLQq
 
 PAYTM_MID=DIY12386817555501617
 PAYTM_WEBSITE=DIYtestingweb
-PAYTM_CHANNEL=WEB
+PAYTM_CHANNEL_ID=WEB
 PAYTM_INDUSTRY_TYPE_ID=Retail
 
 PAYTM_CUST_ID=QYWOCj63505197919784                      
