--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "https": "^1.0.0",
     "mongoose": "^5.12.15",
     "nodemon": "^2.0.7",
+    "paytmchecksum": "^1.5.0",
     "react-file-base64": "^1.0.3",
     "uuid": "^8.3.2"
   }
