--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "formidable": "^1.2.6",
+    "formidable": "^2.0.1",
     "https": "^1.0.0",
+    "minimist": "^1.2.6",
     "mongoose": "^6.2.4",
-    "mpath": "^0.8.4",
+    "mpath": "^0.9.0",
     "multer": "^1.4.4",
     "node-fetch": "^3.2.1",
     "nodemon": "^2.0.15",
