--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "async": "^3.2.2",
     "axios": "^0.21.1",
     "glob-parent": "^6.0.2",
     "immer": "^9.0.6",
