--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "client-install": "cd client && npm install",
     "client-build": "cd client && npm run build",
     "heroku-postbuild": "npm run client-install && npm run client-build"
@@ -19,13 +19,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "formidable": "^1.2.6",
+    "formidable": "^2.0.1",
     "https": "^1.0.0",
+    "minimist": "^1.2.6",
     "mongoose": "^6.2.4",
-    "mpath": "^0.8.4",
+    "mpath": "^0.9.0",
     "multer": "^1.4.4",
-    "node-fetch": "^3.2.1",
-    "nodemon": "^2.0.15",
+    "node-fetch": "^3.2.4",
+    "nodemon": "^2.0.16",
     "paytmchecksum": "^1.5.0",
     "uuid": "^8.3.2"
   }
