--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,8 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "eventsource": ">=2.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eventsource": ">=2.0.2"
   }
 }
