--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,9 @@
     "react-scripts": "^5.0.1",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "web-vitals": "^2.1.4",
+    "eventsource": ">=2.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
