--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 node_modules
 .env
-# package-lock.json
+package-lock.json
 client/node_modules
-# client/package-lock.json
+client/package-lock.json
